# Springboard_repo

./: 02_data_wrangling.ipynb  03_exploratory_data_analysis.ipynb  04_preprocessing_and_training.ipynb  05_modeling.ipynb  Unit 4 Challenge - Tier 3 [Alexey Kholodov].ipynb  api_data_wrangling_mini_project.ipynb
11.4.1 Case Study - Linear Regression/: Springboard Regression Case Study - the Red Wine Dataset - Tier 3.ipynb
17.2.4 GridSearchKNN_Case_Study/: GridSearchKNN_Case_Study.ipynb
17.2.6 - Bayesian Optimization/: Bayesian_optimization_case_study.ipynb
18.3 Craft a Story from a Dataset/: Data Collection.ipynb  Storytelling.ipynb
20.1 Cowboy Cigarettes Case Study/: Cowboy Cigarettes Case Study - Tier 3.ipynb
26. Relax Challenge/: Relax challenge.ipynb
26. Ultimate Challenge/: Data Analysis Interview Challenge.ipynb
Apps_project/: Springboard Apps project - Tier 3 - Complete.ipynb
CS2-flights-delay-REPO/: Makefile  README.md  pyproject.toml
CS2-flights-delay-REPO/docs/: Data Dictionary.docx
CS2-flights-delay-REPO/notebooks/: 1. Data Wrangling.ipynb  1.1. Features selection.ipynb  2. EDA.ipynb  3. Pre-processing and Training Data Development.ipynb  4. Modeling.ipynb  Data Wrangling.ipynb  DataWrangling.py  EDA.ipynb  Elapsed time check 2014_03.ipynb  Elapsed time check.ipynb  Memory check.ipynb  Modeling.ipynb  Pre-processing and Training Data Development.ipynb  Tests.ipynb  functions.ipynb  shrink_ints.ipynb
CS2-flights-delay-REPO/reports/: Capstone project presentation.pptx  Model_Metrics_with_Descriptions.txt
CS3-Garbahe-Classification/: app.py  (+3 more)
(+33 files in other folders)
