[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flights-delay"
version = "0.0.1"
description = "This project aims to develop a predictive model that helps travelers estimate the likelihood and duration of flight delays with a specified level of accuracy. The objective is to enable travelers to plan itineraries with connected flights, either by the same or different airlines, that meet specific arrival time requirements. By leveraging historical flight data and machine learning techniques, the model will provide insights into potential delays, helping travelers make informed decisions and reduce the risk of missed connections."
authors = [
  { name = "Alexey Kholodov" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.4"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["flights-delay"]
force_sort_within_sections = true
